--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -2,20 +2,27 @@
 
 .header-container {
   width: 100%;
-  padding: 0 3rem;
+  padding: 0 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 8rem;
   position: fixed;
   top: 0;
   z-index: 2;
-  background-color: transparent;
   transition: .2s;
-  margin-bottom: -7.3rem;
+  background-color: var(--dark-primary);
+  height: 5.5rem;
+  margin-bottom: 0;
+
+  @include mx.media(laptop-up) {
+    padding: 0 3rem;
+    margin-bottom: -7.3rem;
+    height: 8rem;
+    background-color: transparent;
+  }
 
   .menu {
-    width: 60rem;
+    width: 100%;
     display: flex;
     align-items: center;
     position: absolute;
@@ -26,6 +33,10 @@
     transition: .2s;
     transition-timing-function: cubic-bezier(0,0,0,1);
     z-index: 1;
+
+    @include mx.media(laptop-up) {
+      width: 61rem;
+    }
   }
 }
 
@@ -52,7 +63,16 @@ body.scrolled .header-container {
       }
 
       .links-nav-menu {
-        padding: 0 5.3rem 0 0;
+        opacity: 0;
+        visibility: hidden;
+        padding: 0;
+        justify-content: center;
+
+        @include mx.media(laptop-up) {
+          padding: 0 5.3rem 0 0;
+          visibility: initial;
+          opacity: 1;
+        }
 
         .nav .access {
           padding: 1.6rem 1.5rem 3.3rem;
@@ -62,25 +82,45 @@ body.scrolled .header-container {
           }
         }
       }
+
+      .search-nav-wrapper .search-nav-container {
+
+        .search-input {
+          height: 5rem;
+          width: 5rem;
+        }
+
+        .icon-search-input {
+          width: 5rem;
+        }
+      }
     }
   }
 }
 
 .trendings {
-  display: flex;
+  display: none;
   position: relative;
   align-items: center;
   justify-content: center;
   transition: .2s;
   height: 4.4rem;
 
+  @include mx.media(laptop-up) {
+    display: flex;
+  }
+
   .links-nav-menu {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: var(--white);
     font-weight: 400;
     margin: 0 1.5rem;
     white-space: nowrap;
     opacity: .8;
+
+    @include mx.media(laptop-up) {
+      font-size: 1.5rem;
+    }
   }
   
   .header-container .menu .trendings .links-nav-menu:first-of-type {
@@ -97,54 +137,177 @@ body.scrolled .header-container {
   position: relative;
   transition: .2s;
   width: 100%;
-  height: 6.6rem;
+  align-items: center;
+  flex-direction: column-reverse;
+
+  @include mx.media(laptop-up) {
+    align-items: normal;
+    flex-direction: row;
+    height: 6.6rem;
+  }
 }
 
 .glossy {
   backdrop-filter: blur(60px) saturate(100%);
   -webkit-backdrop-filter: blur(60px) saturate(100%);
   background-color: transparent;
-  border-radius: 3.5rem;
+  border-radius: 0;
   position: absolute;
   opacity: 1;
-  top: 0;
+  top: 5.5rem;
   right: 0;
+  left: -9rem;
   bottom: 0;
-  left: 0;
   transition: .2s;
+  width: calc(100% + 18rem);
+  
+
+  @include mx.media(laptop-up) {
+    top: 0;
+    border-radius: 3.5rem;
+    left: 0;
+    width: 100%;
+  }
 }
 
-.header-container .menu .product-menu .links-nav-menu {
-  display: flex;
-  padding-left: 2rem;
-  transition: .2s;
-  z-index: 1;
-  width: 100%;
+.header-container .menu .product-menu {
 
-  .nav {
+  .links-nav-menu {
     display: flex;
-    flex-direction: column;
-    position: static;
-    transition: width .2s;
+    padding: 0;
+    transition: .2s;
+    z-index: 1;
+    width: 100%;
+    justify-content: center;
 
-    .access {
+    @include mx.media(laptop-up) {
+      padding-left: 2rem;
+      justify-content: normal;
+    }
+
+    .nav {
       display: flex;
-      align-items: center;
-      color: #fff;
-      padding: 2.4rem 1.5rem;
+      flex-direction: column;
+      position: static;
+      transition: width .2s;
+
+      .access {
+        display: flex;
+        align-items: center;
+        color: #fff;
+        padding: 1rem;
+
+        @include mx.media(laptop-up) {
+          padding: 2.4rem 1.5rem;
+        }
+      }
+
+      .icon-xs {
+        display: none;
+
+        @include mx.media(laptop-up) {
+          display: flex;
+          margin-right: 1rem;
+        }
+      }
+
+      .title {
+        margin: 0;
+        font-size: 1.3rem;
+
+        @include mx.media(laptop-up) {
+          margin-right: 1rem;
+          font-size: 1.5rem;
+        }
+      }
+
+      .icon-arrow {
+        transform: rotate(90deg);
+        opacity: .4;
+        margin-left: 1rem;
+
+        @include mx.media(laptop-up) {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+
+  .search-nav-wrapper {
+    width: calc(100% - 6rem);
+    display: flex;
+    justify-content: center;
+    height: 55px;
+    align-items: center;
+    max-width: 500px;
+
+    @include mx.media(laptop-up) {
+      display: block;
+      width: auto;
+      height: auto;
+      max-width: none;
     }
 
-    .icon-xs {
-      margin-right: 1rem;
-    }
+    .search-nav-container {
+      width: 100%;
+      position: relative;
+      display: flex;
+      justify-content: center;
 
-    .title {
-      margin-right: 1rem;
-    }
+      @include mx.media(laptop-up) {
+        position: inherit;
+        display: block;
+        width: auto;
+      }
 
-    .icon-arrow {
-      transform: rotate(90deg);
-      opacity: .4;
+      .search-input {
+        font-size: 1.3rem;
+        color: transparent;
+        border-radius: 8rem;
+        background: var(--primary);
+        background-repeat: no-repeat;
+        background-position: 50%;
+        padding: 0;
+        margin: .8rem 0;
+        height: 3.5rem;
+        width: 8rem;
+        position: relative;
+        right: 0;
+        border: 0;
+        z-index: 11;
+        outline: none;
+        transition: .2s;
+        box-shadow: none;
+
+        @include mx.media(laptop-up) {
+          font-size: 1.7rem;
+          margin: 0;
+          width: 6.6rem;
+          height: 100%;
+          position: absolute;
+        }
+      }
+    
+      .icon-search-input {
+        z-index: 11;
+        width: 100%;
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-image: url(./src/search.png);
+        background-repeat: no-repeat;
+        background-size: 2.2rem;
+        background-position: 50%;
+        cursor: pointer;
+        visibility: visible;
+        opacity: 1;
+        transition: .2s;
+
+        @include mx.media(laptop-up) {
+          width: 6.6rem;
+        }
+      }
     }
   }
 }
