--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -122,7 +122,7 @@
   background-color: #fff;
 }
 
-.icon-small {
+.icon-small-header {
   width: 3rem;
   height: 3rem;
   flex: 0 0 3rem;
@@ -134,6 +134,10 @@
   }
 }
 
+.icon-small-header:hover {
+  background-color: var(--light-accent);
+}
+
 .logo-ig {
   background-image: url(./src/logo3.png);
   background-size: 100%;
@@ -141,6 +145,11 @@
   height: 3rem;
 
   @include mx.media(laptop-up) {
+    width: 16.875rem;
+    height: 4.5rem;
+  }
+
+  @include mx.media(desktop-up) {
     width: 22.5rem;
     height: 6rem;
   }
@@ -215,6 +224,11 @@ body.scrolled .header-container {
           @include mx.media(laptop-up) {
             width: 5rem;
           }
+        }
+
+        .search-advanced {
+          top: 1.9rem;
+          right: 1.7rem;
         }
       }
     }
@@ -372,6 +386,10 @@ body.scrolled .header-container {
     align-items: center;
     max-width: 500px;
 
+    @include mx.media(tablet-up) {
+      width: calc(100% - 32rem);
+    }
+
     @include mx.media(laptop-up) {
       display: block;
       width: auto;
@@ -418,6 +436,32 @@ body.scrolled .header-container {
           position: absolute;
         }
       }
+
+      .search-input::-webkit-input-placeholder {
+        color: transparent;
+      }
+
+      .close-search {
+        cursor: pointer;
+        position: absolute;
+        right: -4rem;
+        z-index: 11;
+        font-size: 4rem;
+        visibility: hidden;
+        opacity: 0;
+        height: 3rem;
+        width: 3rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5rem;
+        top: 50%;
+        transform: translateY(-50%) rotate(45deg);
+      }
+
+      .close-search:hover {
+        color: var(--accent);
+      }
     
       .icon-search-input {
         z-index: 11;
@@ -443,6 +487,93 @@ body.scrolled .header-container {
       .icon-search-input:hover {
         transform: scale(1.2);
       }
+
+      .search-advanced {
+        font-size: 1.3rem;
+        color: #fff;
+        position: absolute;
+        right: 2.5rem;
+        z-index: 11;
+        opacity: 0;
+        visibility: hidden;
+        top: 2.5rem;
+        display: flex;
+        align-items: center;
+      }
+
+      .search-advanced:hover {
+        color: var(--accent);
+      }
+    }
+  }
+}
+
+body.search-open {
+  .header-container .menu .product-menu .search-nav-wrapper .search-nav-container {
+    .search-input {
+      color: #fff;
+      width: 100%;
+      padding: 0 2.5rem;
+      cursor: text;
+      outline: none;
+    }
+
+    .search-input::-webkit-input-placeholder {
+      color: #ffffff89;
+    }
+
+    .close-search {
+      opacity: 1;
+      visibility: visible;
+      transition: .2s;
+    }
+
+    .icon-search-input {
+      visibility: hidden;
+      opacity: 0;
+    }
+
+    .search-advanced {
+      visibility: visible;
+      opacity: 1;
+      transition: .2s;
+    }
+  }
+  
+  @include mx.media(tablet) {
+    .header-container {
+      .logo-ig {
+        opacity: 0;
+        visibility: hidden;
+        display: none;
+      }
+
+      .header-right {
+        opacity: 0;
+        visibility: hidden;
+        display: none;
+      }
+
+      .menu .product-menu .search-nav-wrapper .search-nav-container {
+        .search-input {
+          padding: 0 1.5rem;
+          position: relative;
+          left: -1.5rem;
+        }
+
+        .close-search {
+          right: -2rem;
+        }
+      }
+    }
+  }
+
+  @include mx.media(laptop) {
+    .header-container .menu .product-menu .search-nav-wrapper .search-nav-container .search-advanced {
+      display: none;
+      font-size: 1.1rem;
+      top: 2rem;
+      right: 1.3rem;
     }
   }
 }
@@ -500,8 +631,6 @@ body.scrolled .header-container {
   height: 1.5rem;
   flex: 0 0 1.5rem;
 }
-
-
 
 
  
