--- a/my-app/src/sections/hero/hero.scss
+++ b/my-app/src/sections/hero/hero.scss
@@ -113,6 +113,7 @@
   -webkit-box-orient: vertical;
   font-size: 1.5rem;
   font-weight: 700;
+  line-height: 3.2rem;
   color: var(--accent);
   text-shadow: 2px 1px var(--light-primary);
   margin-bottom: 1rem;
