--- a/my-app/src/sections/cartSections/mainContentCart/mainContentCart.scss
+++ b/my-app/src/sections/cartSections/mainContentCart/mainContentCart.scss
@@ -30,7 +30,7 @@
     display: flex;
     margin-top: 9.5rem;
     align-items: flex-start;
-    flex-direction: column-reverse;
+    flex-direction: column;
 
     @include mx.media(tablet-up) {
       margin-top: 8.5rem;
@@ -56,6 +56,11 @@
         background-color: var(--dark-primary);
         border-radius: 1.5rem;
         padding: 1rem 1rem 1rem;
+        margin: 1rem;
+
+        @include mx.media(mobile-up) {
+          margin: 0;
+        }
 
         @include mx.media(tablet-up) {
           padding: 2rem 2rem 2rem;
@@ -63,7 +68,8 @@
       }
 
       h2 {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
+        font-weight: 700;
         font-family: 'Lato', sans-serif;
         text-align: center;
 
@@ -163,9 +169,9 @@
                   padding: .2rem;
       
                   .icon-s {
-                    width: 3.5rem;
-                    height: 3.5rem;
-                    flex: 0 0 3.5rem;
+                    width: 2.5rem;
+                    height: 2.5rem;
+                    flex: 0 0 2.5rem;
                     position: relative;
                     transform: scale(1.01);
                     mask-repeat: no-repeat;
@@ -175,6 +181,12 @@
                     mask-position: center;
                     -webkit-mask-position: center;
                     background-color: #14487b;
+
+                    @include mx.media(mobile-up) {
+                      width: 3.5rem;
+                      height: 3.5rem;
+                      flex: 0 0 3.5rem;
+                    }
                   }
       
                   .icon-pc {
@@ -202,9 +214,13 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                margin-top: 1.5rem;
+                margin-top: .5rem;
                 font-size: 1.3rem;
                 color: var(--grey);
+
+                @include mx.media(mobile-up) {
+                  margin-top: 1.5rem;
+                }
 
                 .icon {
 
@@ -242,6 +258,11 @@
               align-items: center;
               margin-left: auto;
               gap: 1rem;
+              flex-direction: column;
+
+              @include mx.media(mobile-up) {
+                flex-direction: row;
+              }
 
               .hidden-official-price {
                 display: none;
@@ -252,14 +273,22 @@
               }
 
               .price {
-                font-size: 1.9rem;
+                font-size: 1.5rem;
                 font-weight: 700;
                 white-space: nowrap;
+
+                @include mx.media(mobile-up) {
+                  font-size: 1.7rem;
+                }
+
+                @include mx.media(tablet-up) {
+                  font-size: 1.9rem;
+                }
               }
 
               .cart-quantity-input {
-                height: 3.4rem;
-                width: 5rem;
+                height: 3rem;
+                width: 5.5rem;
                 border-radius: .5rem;
                 border: 1px solid var(--accent);
                 background-color: #eee;
@@ -267,17 +296,30 @@
                 padding: 0;
                 text-align: center;
                 font-size: 1.2em;
+
+                @include mx.media(mobile-up) {
+                  height: 3.4rem;
+                  width: 5rem;
+                }
               }
             }
           }
 
           .item-container:not(:last-child) {
-            padding-bottom: 3rem;
+            padding-bottom: 1.5rem;
             border-bottom: 1px solid hsla(0,0%,100%,.1);
+
+            @include mx.media(mobile-up) {
+              padding-bottom: 3rem;
+            }
           }
 
           .item-container:not(:first-child) {
-            padding-top: 3rem;
+            padding-top: 1.5rem;
+
+            @include mx.media(mobile-up) {
+              padding-top: 3rem;
+            }
           }
         }
       }
@@ -289,13 +331,30 @@
       .wishlist {
         display: flex;
         flex-direction: column;
-        padding: 2rem 2rem 3rem;
+        padding: 1.5rem 2rem 2rem;
+        margin: 1rem;
+
+        @include mx.media(mobile-up) {
+         margin: 0;
+         padding: 2rem 2rem 3rem;
+        }
 
         h2 {
-          font-size: 2.3rem;
-          margin-bottom: 2.5rem;
+          font-size: 1.7rem;
+          font-weight: 700;
+          margin-bottom: 1.5rem;
           font-family: 'Lato', sans-serif;
           text-align: center;
+
+          @include mx.media(mobile-up) {
+            font-size: 1.9rem;
+            margin-bottom: 2rem;
+          }
+
+          @include mx.media(laptop-up) {
+            font-size: 2.3rem;
+            margin-bottom: 2.5rem;
+          }
         }
 
         .cartpage-listing {
@@ -306,16 +365,33 @@
             justify-content: space-between;
 
             .cover {
-              margin-right: 2rem;
+              margin-right: 1rem;
               color: #fff;
               text-decoration: none;
+
+              @include mx.media(mobile-up) {
+                margin-right: 1.5rem;
+              }
+
+              @include mx.media(tablet-up) {
+                margin-right: 2rem;
+              }
 
               picture {
                 display: flex;
 
                 img {
-                  border-radius: .8rem;
-                  width: 13rem;
+                  border-radius: .5rem;
+                  width: 7rem;
+
+                  @include mx.media(mobile-up) {
+                    width: 10rem;
+                    border-radius: .8rem;
+                  }
+
+                  @include mx.media(tablet-up) {
+                    width: 13rem;
+                  }
                 }
               }
             }
@@ -327,15 +403,22 @@
 
 
               .name {
-                font-size: 1.5rem;
+                font-size: 1.3rem;
                 font-weight: 700;
                 display: flex;
                 align-items: center;
 
+                @include mx.media(mobile-up) {
+                    font-size: 1.5rem;
+                }
+
                 .platform {
-                  margin-right: .5rem;
                   transform: scale(.85);
                   transform-origin: left;
+
+                  @include mx.media(mobile-up) {
+                    margin-right: .5rem;
+                  }
                 }
 
                 .platform-pc {
@@ -344,9 +427,9 @@
                   padding: .2rem;
       
                   .icon-s {
-                    width: 3.5rem;
-                    height: 3.5rem;
-                    flex: 0 0 3.5rem;
+                    width: 2.5rem;
+                    height: 2.5rem;
+                    flex: 0 0 2.5rem;
                     position: relative;
                     transform: scale(1.01);
                     mask-repeat: no-repeat;
@@ -356,6 +439,12 @@
                     mask-position: center;
                     -webkit-mask-position: center;
                     background-color: #14487b;
+
+                    @include mx.media(mobile-up) {
+                    width: 3.5rem;
+                    height: 3.5rem;
+                    flex: 0 0 3.5rem;
+                    }
                   }
       
                   .icon-pc {
@@ -376,14 +465,22 @@
               .type {
                 font-size: 1.3rem;
                 color: var(--grey);
-                margin-top: .5rem;
+
+                @include mx.media(mobile-up) {
+                  margin-top: .5rem;
+                }
               }
 
               .price {
                 font-weight: 700;
-                margin-top: 1rem;
-                font-size: 1.8rem;
+                margin-top: .2rem;
+                font-size: 1.3rem;
                 margin-left: 0;
+
+                @include mx.media(mobile-up) {
+                  margin-top: 1rem;
+                  font-size: 1.8rem;
+                }
               }
             }
 
@@ -436,81 +533,159 @@
           }
 
           .item-listing:not(:last-child) {
-            padding-bottom: 3rem;
+            padding-bottom: 1.5rem;
             border-bottom: .1rem solid hsla(0,0%,100%,.1);
+          
+            @include mx.media(laptop-up) {
+              padding-bottom: 3rem;
+            }
           }
 
           .item-listing:not(:first-child) {
-            padding-top: 3rem;
+            padding-top: 1.5rem;
+
+            @include mx.media(laptop-up) {
+              padding-top: 3rem;
+            }
           }
         }
       }
     }
 
     .cart-right {
+      top: auto;
+      bottom: 1.5rem;
+      margin-left: 0;
+      width: 100%;
+      left: 0;
+      z-index: 1;
+
+      @include mx.media(tablet-up) {
+      top: 8.5rem;
+      margin-left: 2rem;
       position: sticky;
+      }
+
+      @include mx.media(laptop-up) {
       top: 14rem;
       margin-left: 6rem;
       flex: 0 1 33%;
+      }
 
       .cart-summary-wrapper {
         border-radius: 1.5rem;
         padding: 2rem 0;
         background-color: var(--dark-primary);
+        margin: 1rem;
+
+        @include mx.media(mobile-up) {
+          margin: 0;
+        } 
 
         h2 {
-          font-size: 2.3rem;
+          font-size: 1.7rem;
+          font-weight: 700;
+          margin-bottom: 1.5rem;
           font-family: 'Lato', sans-serif;
           text-align: center;
+
+          @include mx.media(tablet-up) {
+            font-size: 1.9rem;
+            margin-bottom: 0;
+          } 
+
+          @include mx.media(laptop-up) {
+            font-size: 2.3rem;
+          }
         }
 
         .cart-summary {
           border-radius: 1.5rem;
-          padding: 3rem;
+          padding: 0 2rem 1rem 2rem;
           display: flex;
           flex-direction: column;
           background-color: var(--dark-primary);
 
+          @include mx.media(mobile-up) {
+            padding: 3rem;
+          }
+
           .summary-row {
-            font-size: 1.8rem;
+            font-size: 1.3rem;
             color: var(--grey);
             display: flex;
             justify-content: space-between;
             margin-bottom: 1rem;
             align-items: flex-end;
+
+            @include mx.media(mobile-up) {
+              font-size: 1.5rem;
+            }
+
+            @include mx.media(laptop-up) {
+              font-size: 1.9rem;
+            }
           }
           
           .summary-row:last-of-type {
             font-weight: 700;
             color: #fff;
-            margin-bottom: 3rem;
+            margin-bottom: 1.5rem;
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
 
+            @include mx.media(mobile-up) {
+              margin-bottom: 2rem;
+            }
+
+            @include mx.media(laptop-up) {
+              margin-bottom: 3rem;
+            }
+
             span:last-of-type {
-              font-size: 2.3rem;
+              font-size: 1.5rem;
+
+              @include mx.media(mobile-up) {
+                font-size: 1.9rem;
+              }
+
+              @include mx.media(laptop-up) {
+                font-size: 2.3rem;
+              }
             }
           }
 
           .button {
             border-radius: .8rem;
             font-weight: 700;
-            font-size: 1.7rem;
+            font-size: 1.3rem;
             background: var(--accent);
             color: #fff;
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            height: 5.6rem;
+            height: 3.6rem;
             box-sizing: border-box;
-            padding: 0 3rem;
+            padding: 0 1.5rem;
             border: 0;
             cursor: pointer;
             text-align: center;
             white-space: normal;
             -webkit-appearance: none;
             transition: background-color .2s;
+
+            @include mx.media(mobile-up) {
+              height: 4.6rem;
+              padding: 0 2rem;
+              font-size: 1.5rem;
+            }
+
+            @include mx.media(laptop-up) {
+              height: 5.6rem;
+              padding: 0 3rem;
+              font-size: 1.7rem;
+            }
 
             .icon-arrow {
               transform: scale(.8);
@@ -535,20 +710,36 @@
 
           .choice {
             color: var(--grey);
-            margin: 3rem 0;
+            margin: 1.5rem 0;
             display: flex;
             justify-content: center;
+
+            @include mx.media(mobile-up) {
+              margin: 3rem 0;
+            }
           }
 
           .back {
             font-weight: 700;
             color: var(--grey);
-            font-size: 1.8rem;
+            font-size: 1.3rem;
             display: flex;
             align-items: center;
             justify-content: center;
 
-            .icon-arrow {
+            @include mx.media(mobile-up) {
+              font-size: 1.5rem;
+            }
+
+            @include mx.media(laptop-up) {
+              font-size: 1.7rem;
+            }
+
+            span {
+              display: flex;
+              align-items: center;
+
+              .icon-arrow {
               background-color: var(--grey);
               transform: rotate(180deg) scale(.8);
               margin-right: 1rem;
@@ -560,12 +751,13 @@
               -webkit-mask-size: contain;
               mask-position: center;
               -webkit-mask-position: center;
-            }
+              }
 
-            .icon-xxs {
-              width: 2rem;
-              height: 2rem;
-              flex: 0 0 2rem;
+              .icon-xxs {
+                width: 2rem;
+                height: 2rem;
+                flex: 0 0 2rem;
+              }
             }
           }
 
